# rusty-salmon

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
script/: health.http  resize.http  whatsoever.http
src/: main.rs
src/util/: downloader.rs  resizer.rs
src/utils/: mod.rs  resizer.rs
