[package]
name = "rusty-salmon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
dotenv = "0.15.0"
env_logger = "0.11.0"
futures-util = "0.3.14"
hyper = "1.1.0"
image = "0.24.8"
indicatif = "0.15.0"
log = "0.4.20"
reqwest = { version = "0.11.23", features= ["stream"] }
serde = { version= "1.0.195", features= ["derive"] }
serde_json = "1.0.111"
tempfile = "3.9.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors"] }
uuid = {version="1.7.0", features=["v4"]}